siosifm_dev_win32/examples/common/siosifmdll.h

typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
typedef int int32;
typedef unsigned int uint32;
// Error Handling
DLLFUNC const char*IfmGetErrorString(int32 errorCode);
/*!
\brief Moves the motor to a new position

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param position the new position
\param speed (in steps/s)

\ret error value
*/
DLLFUNC int32 IfmMotorMoveAbs(int32 devNumber, int32 motorNumber,int32 position, int32 speed);
/*!
\brief Sets the a position

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param newPosition the new position

This function only updates the internal position counter. The motor will not move.

\ret error value
*/
DLLFUNC int32 IfmMotorSetPos(int32 devNumber, int32 motorNumber,int32 newPosition);
/*!
\brief Enables the motor

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

\ret error value
*/
DLLFUNC int32 IfmMotorEnable(int32 devNumber, int32 motorNumber);
/*!
\brief Disables the motor

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

\ret error value
*/
DLLFUNC int32 IfmMotorDisable(int32 devNumber, int32 motorNumber);
/*!
\brief Requests the status of the motor

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

The transmission of the status takes up to appox. 100 milliseconds. This function requests the transmission and returns immediately.
The status itself can be read using IfmMotorStatus.

IfmMotorReadStatus requests the status and blocks until the data are transferred.

\ret error value
*/
DLLFUNC int32 IfmMotorRequestStatus(int32 devNumber, int32 motorNumber);
/*!
\brief Read the status of the motor

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param status pointer to an integer an which the status word will be written
\param position pointer to an integer on which the current position will be written
\param application pointer to an integer on which an identifier of the motor will be written. This identifier stands for the specific application
 (gauging probe, tonometer test, NMM ...) the motor card is configured for

Before using this function the status must be requested using IfmMotorRequestStatus. If the requested status is not yet available,
the function returns with an error.

\ret error value
*/

DLLFUNC int32 IfmMotorStatus(int32 devNumber, int32 motorNumber,int32 *status, int32 *position, uint32 *application);
/*!
\brief Read the status of the motor

\param devNumber the unique identifier for the device
\param motorNumber the number of the motor
(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
\param status pointer to an integer an which the status word will be written
\param position pointer to an integer on which the current position will be written
\param application pointer to an integer on which an identifier of the motor will be written. This identifier stands for the specific application
 (gauging probe, tonometer test, NMM ...) the motor card is configured for
\param timeout_ms the time in ms this function will wait for the status information. Should be typically above 200ms.

\ret error value
*/
DLLFUNC int32 IfmMotorReadStatus(int32 devNumber, int32 motorNumber,int32 *status, int32 *position, uint32 *application,int32 timeout_ms);
// service functions; do not use

DLLFUNC int32 IfmMotorRequestControlStruct(int32 devNumber, int32 motorNumber);
DLLFUNC int32 IfmMotorGetControlStruct(int32 devNumber, int32 motorNumber,unsigned char *buffer);
DLLFUNC int32 IfmMotorSetControlStruct(int32 devNumber, int32 motorNumber,unsigned char *buffer);
DLLFUNC int32 IfmRequestFactoryCfg(int32 devNumber);
DLLFUNC int32 IfmRequestSystemCfg(int32 devNumber);
DLLFUNC int32 IfmGetSystemCfg(int32 devNumber,void *cfg);
DLLFUNC int32 IfmMirrorSystemCfg(int32 devNumber);
DLLFUNC int32 IfmSendByteArray(int32 devNumber, void *Data);       // Bootloader
DLLFUNC int32 IfmSendBootAddr(int32 devNumber, void *Data);        // Bootloader
DLLFUNC int32 IfmGetAnswer(int32 devNumber);                       // Bootloader
DLLFUNC int32 IfmSpiCommand(int32 devNumber, int32 command, int32 val1, int32 val2);
DLLFUNC int32 IfmSpiAnswer(int32 devNumber, int32 *val1, int32 *val2, int32 *val3);
DLLFUNC void IfmSetSensorValue(int32 devNumber, int32 sensorNumber, double value);
DLLFUNC void IfmSetSlaveSensorValue(int32 devNumber, int32 sensorNumber, double value);
DLLFUNC void IfmSetSensorProperty(int32 devNumber, int32 sensorNumber, int32 value);
// Human readable error message
DLLFUNC const char* IfmGetErrorString(int32 errorCode);