siosifm_dev_win32/python/siosifm.py


IfmMotorMoveAbs = ifmdll.IfmMotorMoveAbs
IfmMotorMoveAbs.argtypes = [c_int, c_int, c_int, c_int]
IfmMotorMoveAbs.resytpe = c_int


#brief Sets the a position

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param newPosition the new position

#This function only updates the internal position counter. The motor will not move.

#ret error value

IfmMotorSetPos = ifmdll.IfmMotorSetPos
IfmMotorSetPos.argtypes = [c_int, c_int, c_int]
IfmMotorSetPos.restype = c_int


#brief Enables the motor

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

#ret error value

IfmMotorEnable = ifmdll.IfmMotorEnable
IfmMotorEnable.argtypes = [c_int, c_int]
IfmMotorEnable.restype = c_int


#brief Disables the motor

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

#ret error value

IfmMotorDisable = ifmdll.IfmMotorDisable
IfmMotorDisable.argtypes = [c_int, c_int]
IfmMotorDisable.restype = c_int


#brief Requests the status of the motor

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)

#The transmission of the status takes up to appox. 100 milliseconds. This function requests the transmission and returns immediately.
#The status itself can be read using IfmMotorStatus.

#IfmMotorReadStatus requests the status and blocks until the data are transferred.

#ret error value

IfmMotorRequestStatus =ifmdll.IfmMotorRequestStatus
IfmMotorRequestStatus.argtypes = [c_int, c_int]
IfmMotorRequestStatus.restype = c_int


#brief Read the status of the motor

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param status pointer to an integer an which the status word will be written
#param position pointer to an integer on which the current position will be written
#param application pointer to an integer on which an identifier of the motor will be written. This identifier stands for the specific application
#(gauging probe, tonometer test, NMM ...) the motor card is configured for

#Before using this function the status must be requested using IfmMotorRequestStatus. If the requested status is not yet available,
#the function returns with an error.

#ret error value

IfmMotorStatus = ifmdll.IfmMotorStatus
IfmMotorStatus.argtypes = [c_int, c_int, c_int, c_int, c_uint]
IfmMotorStatus.restype = c_int


#brief Read the status of the motor

#param devNumber the unique identifier for the device
#param motorNumber the number of the motor
#(each controller card controls two motors, 0 and 1 refers the motors of the first card, 2 and 3 the motors of a second controller card and so on)
#param status pointer to an integer an which the status word will be written
#param position pointer to an integer on which the current position will be written
#param application pointer to an integer on which an identifier of the motor will be written. This identifier stands for the specific application
#(gauging probe, tonometer test, NMM ...) the motor card is configured for
#param timeout_ms the time in ms this function will wait for the status information. Should be typically above 200ms.

#ret error value

IfmMotorReadStatus = ifmdll.IfmMotorReadStatus
IfmMotorReadStatus.argtypes = [c_int, c_int, c_void_p, c_void_p, c_void_p, c_int]
IfmMotorReadStatus.restype = c_int


#service functions; do not use

IfmMotorRequestControlStruct = ifmdll.IfmMotorRequestControlStruct
IfmMotorRequestControlStruct.argtypes = [c_int, c_int]
IfmMotorRequestControlStruct.restype = c_int

IfmMotorGetControlStruct = ifmdll.IfmMotorGetControlStruct
IfmMotorGetControlStruct.argtypes = [c_int, c_int, c_ubyte]
IfmMotorGetControlStruct.restype = c_int

IfmMotorSetControlStruct = ifmdll.IfmMotorSetControlStruct
IfmMotorSetControlStruct.argtypes = [c_int, c_int, c_ubyte]
IfmMotorSetControlStruct.restype = c_int


IfmRequestFactoryCfg = ifmdll.IfmRequestFactoryCfg
IfmRequestFactoryCfg.argtypes = [c_int]
IfmRequestFactoryCfg.restype = c_int

IfmRequestSystemCfg = ifmdll.IfmRequestSystemCfg
IfmRequestSystemCfg.argtypes = [c_int]
IfmRequestSystemCfg.restype = c_int

IfmGetSystemCfg = ifmdll.IfmGetSystemCfg
IfmGetSystemCfg.argtypes = [c_int, c_void_p]
IfmGetSystemCfg.restype = c_int

IfmGetSystemCfg = ifmdll.IfmGetSystemCfg
IfmGetSystemCfg.argtypes = [c_int, c_void_p]
IfmGetSystemCfg.restype = c_int

IfmMirrorSystemCfg =ifmdll.IfmMirrorSystemCfg
IfmMirrorSystemCfg.argtypes = [c_int]
IfmMirrorSystemCfg.restype = c_int

IfmSendByteArray = ifmdll.IfmSendByteArray          #Bootloader
IfmSendByteArray.argtypes = [c_int, c_void_p]
IfmSendByteArray.restype = c_int

IfmSendBootAddr = ifmdll.IfmSendBootAddr            #Bootloader
IfmSendBootAddr.argtypes = [c_int, c_void_p]
IfmSendBootAddr.restype = c_int

IfmGetAnswer = ifmdll.IfmGetAnswer                  #Bootloader
IfmGetAnswer.argtypes = [c_int]
IfmGetAnswer.restype = c_int


IfmSpiCommand = ifmdll.IfmSpiCommand
IfmSpiCommand.argtypes = [c_int, c_int, c_int, c_int]
IfmSpiCommand.restype = c_int

IfmSpiAnswer = ifmdll.IfmSpiAnswer
IfmSpiAnswer.argtypes = [c_int, c_int, c_int, c_int]
IfmSpiAnswer.restype = c_int

IfmSetSensorValue = ifmdll.IfmSetSensorValue
IfmSetSensorValue.argtypes = [c_int, c_int, c_double]

IfmSetSlaveSensorValue =ifmdll.IfmSetSlaveSensorValue
IfmSetSlaveSensorValue.argtypes = [c_int, c_int, c_double]

IfmSetSensorProperty = ifmdll.IfmSetSensorProperty
IfmSetSensorProperty.argtypes = [c_int, c_int, c_int]


#Human readable error message

IfmGetErrorString = ifmdll.IfmGetErrorString
IfmGetErrorString.argtypes = [c_int]
IfmGetErrorString.restype = c_char_p


#End of siosifm.py
